--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.2",
+    "mongoose": "^8.19.1",
     "uuid": "^13.0.0"
   }
 }
