Hash password before save

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/tatianna10/movie-magic-sept-2025#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.2",
+    "mongoose": "^8.19.1",
     "uuid": "^13.0.0"
   }
 }
